--- a/assets/custom.css.liquid
+++ b/assets/custom.css.liquid
@@ -265,6 +265,9 @@
 
 /* HEADER */
 
+#header li li {
+    position: relative;
+}
 #header ul li:hover .dropdown-menu {
     visibility: visible;
 }
@@ -374,6 +377,37 @@ input[type=number] {
     background-color: rgb(230, 230, 230);
   }
   
-  ::selection {
-    background-color: rgb(238, 238, 238);
-  }
+::selection {
+background-color: rgb(238, 238, 238);
+}
+
+/* Mobile Navmenu */
+
+#slides{  
+position:relative;
+overflow-x:hidden;
+margin:0 auto;
+background:white;
+width:100%;
+height:100vh;
+white-space:nowrap;
+}
+#slides .slidesInside{ 
+position:relative;
+display:inline-block;
+margin-right:-4px;
+white-space:normal;
+vertical-align:top;
+*display:inline;
+background:white;
+width:100%;
+height:100vh;
+}
+
+.chevronDesc, .chevronNav {
+  transition: transform .3s ease-in-out;
+}
+
+.rotate {
+  transform: rotate(180deg);
+}
