--- a/sections/slideshow.liquid
+++ b/sections/slideshow.liquid
@@ -1,6 +1,6 @@
 <style>
     #shopify-section-{{ section.id }} .flickity-viewport {
-        height: 100%;
+        height: 100%!important;
     }
 
     #shopify-section-{{ section.id }} .flickity-page-dots {
