--- a/snippets/mobile-navmenu.liquid
+++ b/snippets/mobile-navmenu.liquid
@@ -1,38 +1,80 @@
 <style>
-#slide ul li {
+#slides ul li {
   cursor: pointer;
 }
+
+
+/* Mobile Navmenu */
+@media only screen and (min-width: 1024px) {
+  #slides{  
+    display: none!important;
+  }
+  #slides .slidesInside{
+    display: none!important;
+  }
+}
+@media only screen and (max-width: 1024px) {
+  #slides{  
+    position:relative;
+    overflow-x:hidden;
+    margin:0 auto;
+    background:white;
+    width:100%;
+    height:100vh;
+    white-space:nowrap;
+  }
+
+  #slides .slidesInside{
+    position:relative;
+    display:inline-block;
+    margin-right:-4px;
+    white-space:normal;
+    vertical-align:top;
+    *display:inline;
+    background:white;
+    width:100%;
+    height:100vh;
+  }
+}
+
+.navmenu-depth-2 {
+  background-color: #e8e8e8;
+}
+
 </style>
 
 <div id="slides" class="hidden">
-    <div class="px-4">
       <ul class="py-4">
         {% for link in linklists[section.settings.header_main_menu].links %}
-            <li class="">
-              <div class="flex items-center justify-between py-2">
-                <a href="{{ link.url }}">{{ link.title }}</a>
+            <li class="relative">
+              <div class="flex items-center justify-between px-4">
+                <a href="{{ link.url }}" class="py-3.5">{{ link.title }}</a>
                 {% if link.links != blank %}
-                    {% if linklists[section.settings.header_main_menu].levels > 1 %}
-                <span aria-hidden="true" class="text-2xl icon icon-chevron-down cursor-pointer navDropdown chevronNav"></span>
+                  <span aria-hidden="true" class="text-2xl icon icon-chevron-down cursor-pointer navDropdown chevronNav"></span>
+                {% endif %}
+              </div>
+              <ul class="navDropItem navmenu-depth-2 hidden">
+                {% for child_link in link.links %}
+                <li>
+                  <div class="flex items-center justify-between px-4">
+                    <a href="{{ child_link.url }}" class="py-3.5">{{ child_link.title }}</a>
+                    {% if child_link.links != blank %}
+                      <span aria-hidden="true" class="text-2xl icon icon-chevron-down cursor-pointer navDropdown chevronNav"></span>
                     {% endif %}
-                {% endif %}
-              </div>
-
-            {% for child_link in link.links %}
-              <div class="navDropItem hidden">
-                <a href="{{ child_link.url }}" class="font-semibold">{{ child_link.title }}</a>
-                {% if child_link.links != blank %}
-                <ul class="grandchild space-y-2">
-                  {% for grandchild_link in child_link.links %}
-                  <li>
-                    <a href="{{ grandchild_link.url }}">{{ grandchild_link.title }}</a>
-                  </li>
-                  {% endfor %}
-                </ul>
-                {% endif %}
-              </div>
-            {% endfor %}
-
+                  </div>
+                  
+                  {% if child_link.links != blank %}
+                  <ul class="grandchild navDropItem hidden space-y-2">
+                    {% for grandchild_link in child_link.links %}
+                    <li>
+                      <a href="{{ grandchild_link.url }}" class="py-3.5 px-6">{{ grandchild_link.title }}</a>
+                    </li>
+                    {% endfor %}
+                  </ul>
+                  {% endif %}
+                </li>
+                {% endfor %}
+              </ul>
             </li>
             
         {% endfor %}
@@ -40,7 +82,7 @@
 
       <div class="border-b"></div>
 
-      <div class="space-y-3 py-5 text-sm">
+      <div class="space-y-3 py-5 px-4 text-sm">
 
         <a href="" class="flex items-center justify-between">
           <p>My account</p>  
@@ -55,7 +97,5 @@
         </a>
 
       </div>
-
-    </div>
 
   </div>
